--- a/pages/mensagem.html
+++ b/pages/mensagem.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AdoPet - Página Inicial</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <title>AdoPet - Mensagem</title>
+    <link rel="stylesheet" href="../css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/mensagem.css">
 </head>
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__nav">
-            <a href="#"><img src="img/Casa.svg" alt="Ícone da home"></a>
-            <a href="#"><img src="img/Mensagens.svg" alt="Ícone de contato"></a>
+            <div class="nav__menu">
+                <a href="#"><img src="../img/Casa.svg" alt="Ícone da home"></a>
+                <a href="#"><img src="../img/Mensagens.svg" alt="Ícone de contato"></a>
+            </div>
+            <div class="nav__usuario">
+                <a href="#"><img src="../img/Usuário.svg" alt="Ícone do perfil de usuário"></a>
+            </div>
         </nav>
     </header>
 </body>
