--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__nav">
-            <a href="#"><img src="img/Casa.svg" alt="Ícone da home"></a>
-            <a href="#"><img src="img/Mensagens.svg" alt="Ícone de contato"></a>
+            <a href="#" class="cabecalho__item"><img src="img/Casa.svg" alt="Ícone da home"></a>
+            <a href="#" class="cabecalho__item"><img src="img/Mensagens.svg" alt="Ícone de contato"></a>
         </nav>
     </header>
+    <footer>
+
+    </footer>
 </body>
 </html>
