--- a/pages/login.html
+++ b/pages/login.html
@@ -15,8 +15,8 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__nav">
-            <a href="#"><img src="../img/Casa.svg" alt="Ícone da home"></a>
-            <a href="#"><img src="../img/Mensagens.svg" alt="Ícone de contato"></a>
+            <a href="#" class="cabecalho__item"><img src="../img/Casa.svg" alt="Ícone da home"></a>
+            <a href="#" class="cabecalho__item"><img src="../img/Mensagens.svg" alt="Ícone de contato"></a>
         </nav>
     </header>
 </body>
