--- a/pages/mensagem.html
+++ b/pages/mensagem.html
@@ -16,12 +16,10 @@
     <header class="cabecalho">
         <nav class="cabecalho__nav">
             <div class="nav__menu">
-                <a href="#"><img src="../img/Casa.svg" alt="Ícone da home"></a>
-                <a href="#"><img src="../img/Mensagens.svg" alt="Ícone de contato"></a>
+                <a href="#" class="cabecalho__item"><img src="../img/Casa.svg" alt="Ícone da home"></a>
+                <a href="#" class="cabecalho__item"><img src="../img/Mensagens.svg" alt="Ícone de contato"></a>
             </div>
-            <div class="nav__usuario">
-                <a href="#"><img src="../img/Usuário.svg" alt="Ícone do perfil de usuário"></a>
-            </div>
+            <a href="#"><img src="../img/Usuário.svg" alt="Ícone do perfil de usuário"></a>
         </nav>
     </header>
 </body>
