--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a href="#" class="cabecalho__item"><img src="img/Mensagens.svg" alt="Ícone de contato"></a>
         </nav>
     </header>
-    <footer>
-
+    <footer class="rodape">
+        <p>2022 - Desenvolvido por Alura.</p>
     </footer>
 </body>
 </html>
