--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -22,5 +22,8 @@
             <a href="#"><img src="../img/Usuário-perfil.png" alt="Ícone do perfil de usuário"></a>
         </nav>
     </header>
+    <footer class="rodape">
+        <p>2022 - Desenvolvido por Alura.</p>
+    </footer>
 </body>
 </html>
