desenvolvendo tela inicial - mobile

--- a/index.html
+++ b/index.html
@@ -10,15 +10,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
-<body>
+<body class="inicial">
     <header class="cabecalho">
         <nav class="cabecalho__nav">
-            <a href="#" class="cabecalho__item"><img src="img/Casa.svg" alt="Ícone da home"></a>
-            <a href="#" class="cabecalho__item"><img src="img/Mensagens.svg" alt="Ícone de contato"></a>
+            <a href="#" class="cabecalho__item"><img src="img/home.svg" alt="Ícone da home"></a>
+            <a href="#" class="cabecalho__item"><img src="img/mail.svg" alt="Ícone de contato"></a>
         </nav>
     </header>
+    <main>
+        <section class="destaque">
+            <img src="img/logo-branca.svg" alt="Logo da AdoPet">
+            <h1 class="destaque__titulo">Boas-vindas!</h1>
+            <p>Que tal mudar sua vida adotando seu novo melhor amigo? Vem com a gente!</p>
+            <ul class="destaque__botao">
+                <li class="botao__item"><a href="#" class="botao__texto">Já tenho conta</a></li>
+                <li class="botao__item"><a href="#" class="botao__texto">Quero me cadastrar</a></li>
+            </ul>
+        </section>
+    </main>
     <footer class="rodape">
         <p>2022 - Desenvolvido por Alura.</p>
     </footer>
