atualizando header - mobile

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -16,10 +16,10 @@
     <header class="cabecalho">
         <nav class="cabecalho__nav">
             <div class="nav__menu">
-                <a href="#" class="cabecalho__item"><img src="../img/Casa.svg" alt="Ícone da home"></a>
-                <a href="#" class="cabecalho__item"><img src="../img/Mensagens.svg" alt="Ícone de contato"></a>
+                <a href="#" class="cabecalho__item"><img src="../img/home.svg" alt="Ícone da home"></a>
+                <a href="#" class="cabecalho__item"><img src="../img/mail.svg" alt="Ícone de contato"></a>
             </div>
-            <a href="#"><img src="../img/Usuário-perfil.png" alt="Ícone do perfil de usuário"></a>
+            <a href="#"><img src="../img/user-perfil.png" alt="Ícone do perfil de usuário"></a>
         </nav>
     </header>
     <footer class="rodape">
