--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,15 +11,46 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../css/cadastro.css">
 </head>
-<body>
+
+<body class="cadastro">
     <header class="cabecalho">
         <nav class="cabecalho__nav">
             <a href="#" class="cabecalho__item"><img src="../img/home.svg" alt="Ícone da home"></a>
             <a href="#" class="cabecalho__item"><img src="../img/mail.svg" alt="Ícone de contato"></a>
         </nav>
     </header>
+
+    <main class="cadastro__formulario">
+        <img src="../img/logo-azul.svg" alt="Logo da Alura" class="cadastro__imagem">
+        <p class="cadastro__texto">Ainda não tem cadastro?</p>
+        <p class="cadastro__texto">Então, antes de buscar seu melhor amigo, precisamos de alguns dados:</p>
+        
+        <form>
+            <div class="container-formulario">
+                <label for="email">Email</label>
+                <input type="email" id="email" class="container-formulario__campo" placeholder="Escolha seu melhor email">
+            </div>
+
+            <div class="container-formulario">
+                <label for="nome">Nome</label>
+                <input type="text" id="nome" class="container-formulario__campo" placeholder="Digite seu nome completo">
+            </div>
+
+            <div class="container-formulario">
+                <label for="senha">Senha</label>
+                <input type="password" id="senha" class="container-formulario__campo campo--senha" placeholder="Crie uma senha">
+            </div>
+
+            <div class="container-formulario">
+                <label for="confereSenha">Confirmar sua senha</label>
+                <input type="password" id="confereSenha" class="container-formulario__campo campo--senha" placeholder="Repita a senha criada acima">
+            </div>
+
+            <button type="submit" class="formulario__botao">Cadastrar</button>
+        </form>
+    </main>
+
     <footer class="rodape">
         <p>2022 - Desenvolvido por Alura.</p>
     </footer>
