corrigindo texto alternativo do logo da AdoPet

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AdoPet - Cadastro</title>
-    <link rel="stylesheet" href="../css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
 
-<body class="cadastro">
+<body class="formulario">
     <header class="cabecalho">
         <nav class="cabecalho__nav">
             <a href="#" class="cabecalho__item"><img src="../img/home.svg" alt="Ícone da home"></a>
@@ -21,8 +20,8 @@
         </nav>
     </header>
 
-    <main class="cadastro__formulario">
-        <img src="../img/logo-azul.svg" alt="Logo da Alura" class="cadastro__imagem">
+    <main class="formulario__conteudo">
+        <img src="../img/logo-azul.svg" alt="Logo da AdoPet" class="formulario__logo">
         <p class="cadastro__texto">Ainda não tem cadastro?</p>
         <p class="cadastro__texto">Então, antes de buscar seu melhor amigo, precisamos de alguns dados:</p>
         
