--- a/pages/login.html
+++ b/pages/login.html
@@ -5,20 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AdoPet - Login</title>
-    <link rel="stylesheet" href="../css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../css/login.css">
 </head>
-<body>
+
+<body class="formulario">
     <header class="cabecalho">
         <nav class="cabecalho__nav">
             <a href="#" class="cabecalho__item"><img src="../img/home.svg" alt="Ícone da home"></a>
             <a href="#" class="cabecalho__item"><img src="../img/mail.svg" alt="Ícone de contato"></a>
         </nav>
     </header>
+
+    <main class="formulario__conteudo">
+        <img src="../img/logo-azul.svg" alt="Logo da AdoPet" class="formulario__logo">
+        <p class="login__texto">Já tem conta? Faça seu login:</p>
+
+        <form>
+            <div class="container-formulario">
+                <label for="email">Email</label>
+                <input type="email" id="email" class="container-formulario__campo" placeholder="Insira seu email">
+            </div>
+
+            <div class="container-formulario">
+                <label for="senha">Senha</label>
+                <input type="password" id="senha" class="container-formulario__campo campo--senha" placeholder="Insira sua senha">
+                <a href="#" class="container-formulario__ancora">Esqueci minha senha</a>
+            </div>
+
+            <button type="submit" class="formulario__botao">Entrar</button>
+        </form>
+    </main>
+
     <footer class="rodape">
         <p>2022 - Desenvolvido por Alura.</p>
     </footer>
