página inicial - tablet e desktop

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,28 +9,35 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body class="inicial">
+
+<body class="body-inicial">
     <header class="cabecalho">
+        <img src="./img/logo-branca.svg" alt="Logo da Adopet" class="cabecalho__logo">
         <nav class="cabecalho__nav">
-            <a href="#" class="cabecalho__item"><img src="img/home.svg" alt="Ícone da home"></a>
-            <a href="#" class="cabecalho__item"><img src="img/mail.svg" alt="Ícone de contato"></a>
+            <a href="#" class="cabecalho__item"><img src="./img/home.svg" alt="Ícone da home"></a>
+            <a href="#" class="cabecalho__item"><img src="./img/mail.svg" alt="Ícone de contato"></a>
         </nav>
     </header>
+
     <main>
-        <section class="destaque">
-            <img src="img/logo-branca.svg" alt="Logo da AdoPet">
-            <h1 class="destaque__titulo">Boas-vindas!</h1>
-            <p>Que tal mudar sua vida adotando seu novo melhor amigo? Vem com a gente!</p>
-            <ul class="destaque__botao">
+        <section class="chamada">
+            <img src="./img/logo-branca.svg" alt="Logo da AdoPet" class="chamada__logo">
+            <h1 class="chamada__titulo">Boas-vindas!</h1>
+            <p class="chamada__texto-mobile">Que tal mudar sua vida adotando seu novo melhor amigo? Vem com a gente!</p>
+            <p class="chamada__texto-tablet">Adotar pode mudar uma vida. Que tal buscar seu novo melhor amigo hoje?</p>
+            <p class="chamada__texto-tablet">Vem com a gente!</p>
+            <ul class="chamada__botao">
                 <li class="botao__item"><a href="#" class="botao__texto">Já tenho conta</a></li>
                 <li class="botao__item"><a href="#" class="botao__texto">Quero me cadastrar</a></li>
             </ul>
         </section>
     </main>
+
     <footer class="rodape">
         <p>2022 - Desenvolvido por Alura.</p>
     </footer>
+
 </body>
 </html>
