--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -12,42 +12,45 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 
-<body class="formulario">
+<body class="body-formulario">
     <header class="cabecalho">
+        <img src="../img/logo-branca.svg" alt="Logo da Adopet" class="cabecalho__logo">
         <nav class="cabecalho__nav">
             <a href="#" class="cabecalho__item"><img src="../img/home.svg" alt="Ícone da home"></a>
             <a href="#" class="cabecalho__item"><img src="../img/mail.svg" alt="Ícone de contato"></a>
         </nav>
     </header>
 
-    <main class="formulario__conteudo">
-        <img src="../img/logo-azul.svg" alt="Logo da AdoPet" class="formulario__logo">
-        <p class="cadastro__texto">Ainda não tem cadastro?</p>
-        <p class="cadastro__texto">Então, antes de buscar seu melhor amigo, precisamos de alguns dados:</p>
-        
-        <form>
-            <div class="container-formulario">
-                <label for="email">Email</label>
-                <input type="email" id="email" class="container-formulario__campo" placeholder="Escolha seu melhor email">
-            </div>
+    <main>
+        <section class="formulario__conteudo">
+            <img src="../img/logo-azul.svg" alt="Logo da AdoPet" class="formulario__logo">
+            <p class="conteudo__texto">Ainda não tem cadastro?</p>
+            <p class="conteudo__texto">Então, antes de buscar seu melhor amigo, precisamos de alguns dados:</p>
+            
+            <form class="formulario">
+                <div class="container-formulario">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" class="container-formulario__campo" placeholder="Escolha seu melhor email">
+                </div>
 
-            <div class="container-formulario">
-                <label for="nome">Nome</label>
-                <input type="text" id="nome" class="container-formulario__campo" placeholder="Digite seu nome completo">
-            </div>
+                <div class="container-formulario">
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome" class="container-formulario__campo" placeholder="Digite seu nome completo">
+                </div>
 
-            <div class="container-formulario">
-                <label for="senha">Senha</label>
-                <input type="password" id="senha" class="container-formulario__campo campo--senha" placeholder="Crie uma senha">
-            </div>
+                <div class="container-formulario">
+                    <label for="senha">Senha</label>
+                    <input type="password" id="senha" class="container-formulario__campo campo--senha" placeholder="Crie uma senha">
+                </div>
 
-            <div class="container-formulario">
-                <label for="confereSenha">Confirmar sua senha</label>
-                <input type="password" id="confereSenha" class="container-formulario__campo campo--senha" placeholder="Repita a senha criada acima">
-            </div>
+                <div class="container-formulario">
+                    <label for="confereSenha">Confirmar sua senha</label>
+                    <input type="password" id="confereSenha" class="container-formulario__campo campo--senha" placeholder="Repita a senha criada acima">
+                </div>
 
-            <button type="submit" class="formulario__botao">Cadastrar</button>
-        </form>
+                <button type="submit" class="formulario__botao">Cadastrar</button>
+            </form>
+        </section>
     </main>
 
     <footer class="rodape">
