--- a/pages/login.html
+++ b/pages/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,36 +12,40 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 
-<body class="formulario">
+<body class="body-formulario">
     <header class="cabecalho">
+        <img src="../img/logo-branca.svg" alt="Logo da Adopet" class="cabecalho__logo">
         <nav class="cabecalho__nav">
             <a href="#" class="cabecalho__item"><img src="../img/home.svg" alt="Ícone da home"></a>
             <a href="#" class="cabecalho__item"><img src="../img/mail.svg" alt="Ícone de contato"></a>
         </nav>
     </header>
 
-    <main class="formulario__conteudo">
-        <img src="../img/logo-azul.svg" alt="Logo da AdoPet" class="formulario__logo">
-        <p class="login__texto">Já tem conta? Faça seu login:</p>
+    <main>
+        <section class="formulario__conteudo">
+            <img src="../img/logo-azul.svg" alt="Logo da AdoPet" class="formulario__logo">
+            <p class="login__texto">Já tem conta? Faça seu login:</p>
 
-        <form>
-            <div class="container-formulario">
-                <label for="email">Email</label>
-                <input type="email" id="email" class="container-formulario__campo" placeholder="Insira seu email">
-            </div>
+            <form>
+                <div class="container-formulario">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" class="container-formulario__campo" placeholder="Insira seu email">
+                </div>
 
-            <div class="container-formulario">
-                <label for="senha">Senha</label>
-                <input type="password" id="senha" class="container-formulario__campo campo--senha" placeholder="Insira sua senha">
-                <a href="#" class="container-formulario__ancora">Esqueci minha senha</a>
-            </div>
+                <div class="container-formulario">
+                    <label for="senha">Senha</label>
+                    <input type="password" id="senha" class="container-formulario__campo campo--senha" placeholder="Insira sua senha">
+                    <a href="#" class="container-formulario__ancora">Esqueci minha senha</a>
+                </div>
 
-            <button type="submit" class="formulario__botao">Entrar</button>
-        </form>
+                <button type="submit" class="formulario__botao">Entrar</button>
+            </form>
+        </section>
     </main>
 
     <footer class="rodape">
         <p>2022 - Desenvolvido por Alura.</p>
     </footer>
+    
 </body>
 </html>
