--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -13,12 +13,15 @@
 </head>
 
 <body class="body-formulario">
+
     <header class="cabecalho">
-        <img src="../img/logo-branca.svg" alt="Logo da Adopet" class="cabecalho__logo">
-        <nav class="cabecalho__nav">
-            <a href="#" class="cabecalho__item"><img src="../img/home.svg" alt="Ícone da home"></a>
-            <a href="#" class="cabecalho__item"><img src="../img/mail.svg" alt="Ícone de contato"></a>
-        </nav>
+        <div class="cabecalho__completo">
+            <img src="../img/logo-branca.svg" alt="Logo da Adopet" class="cabecalho__logo">
+            <nav class="cabecalho__menu">
+                <a href="#"><img src="../img/home.svg" alt="Ícone da home"></a>
+                <a href="#"><img src="../img/mail.svg" alt="Ícone de contato"></a>
+            </nav>
+        </div>
     </header>
 
     <main>
